# houzi-game-engine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  STYLE_GUIDE.md  THIRD-PARTY-LICENSES.md  VERSIONS
demo/: CMakeLists.txt
demo/data/: keyboard.xcf
demo/src/: AudioDemo.cpp  InputDemo.cpp  RenderingDemo.cpp  TextRenderingDemo.cpp
external-libs/: CMakeLists.txt
external-libs/SDL2/: CMakeLists.txt
external-libs/freetype/: CMakeLists.txt
external-libs/glad/: CMakeLists.txt
external-libs/glad/include/glad/: glad.h  glad_egl.h  glad_glx.h  glad_wgl.h
external-libs/glad/src/glad/: glad.c  glad_egl.c  glad_glx.c  glad_wgl.c
external-libs/glfw/: CMakeLists.txt
external-libs/glfw/src/: CMakeLists.txt
external-libs/googletest/: CMakeLists.txt
external-libs/googletest/googlemock/: CMakeLists.txt
external-libs/googletest/googletest/: CMakeLists.txt
external-libs/googletest/googletest/cmake/: internal_utils.cmake
external-libs/ogg/: CMakeLists.txt
external-libs/openal-soft/: CMakeLists.txt
external-libs/soil/: CMakeLists.txt
external-libs/vorbis/: CMakeLists.txt
external-libs/vorbis/lib/: CMakeLists.txt
houal/: CMakeLists.txt
houal/include/hou/al/: AlBuffer.hpp  AlBuffer.inl  AlBufferFormat.hpp  AlBufferHandle.hpp  AlCheck.hpp  AlContext.hpp  AlDevice.hpp  AlDistanceModel.hpp  AlError.hpp  AlExport.hpp  AlListener.hpp  AlObjectHandle.hpp  AlSource.hpp  AlSourceHandle.hpp  AlSourceState.hpp  AlState.hpp  OpenAl.hpp
houal/src/hou/al/: AlBuffer.cpp  AlBufferFormat.cpp  AlBufferHandle.cpp  AlCheck.cpp  AlContext.cpp  AlDevice.cpp  AlError.cpp  AlListener.cpp  AlObjectHandle.cpp  AlSource.cpp  AlSourceHandle.cpp  AlState.cpp
houal/test/: CMakeLists.txt
houal/test/hou/al/: TestAlBase.cpp  TestAlBase.hpp  TestAlBuffer.cpp  TestAlBufferHandle.cpp  TestAlCheck.cpp  TestAlContext.cpp  TestAlDevice.cpp  TestAlListener.cpp  TestAlSource.cpp  TestAlSourceHandle.cpp  TestAlState.cpp
houaud/: CMakeLists.txt
houaud/include/hou/aud/: AudError.hpp  AudExport.hpp  AudioBuffer.hpp  AudioBufferFormat.hpp  AudioContext.hpp  AudioDistanceModel.hpp  AudioFormat.hpp  AudioModel.hpp  AudioSource.hpp  AudioSource.inl  AudioSourceBase.hpp  AudioSourceBase.inl  AudioSourceState.hpp  AudioStream.hpp  AudioStreamIn.hpp  AudioStreamIn.inl  EmptyAudioStreamIn.hpp  Listener.hpp  MemoryAudioSource.hpp  OggFileIn.hpp  SoundDistanceModel.hpp  SoundModel.hpp  StreamingAudioSource.hpp  WavFileIn.hpp
houaud/src/hou/aud/: AudError.cpp  AudioBuffer.cpp  AudioContext.cpp  AudioDistanceModel.cpp  AudioFormat.cpp  AudioModel.cpp  AudioSource.cpp  AudioSourceBase.cpp  AudioSourceState.cpp  AudioStream.cpp  AudioStreamIn.cpp  EmptyAudioStreamIn.cpp  Listener.cpp  MemoryAudioSource.cpp  OggFileIn.cpp  SoundDistanceModel.cpp  SoundModel.cpp  StreamingAudioSource.cpp  WavFileIn.cpp
houaud/test/: CMakeLists.txt
houaud/test/hou/aud/: TestAudBase.cpp  TestAudBase.hpp  TestAudBaseTestSpecificContext.cpp  TestAudBaseTestSpecificContext.hpp  TestAudioBuffer.cpp  TestAudioContext.cpp  TestAudioSource.cpp  TestAudioSourceBase.cpp  TestData.cpp  TestData.hpp  TestEmptyAudioStreamIn.cpp  TestListener.cpp  TestMemoryAudioSource.cpp  TestOggFileIn.cpp  TestSoundModel.cpp  TestStreamingAudioSource.cpp  TestWavFileIn.cpp
houcor/: CMakeLists.txt
houcor/include/hou/: Config.hpp  Config.hpp.in
houcor/include/hou/cor/: BasicTypes.hpp  BitwiseOperators.hpp  CharacterEncodings.hpp  CharacterEncodings.inl  Clock.hpp  CorError.hpp  CorExport.hpp  CorUtils.hpp  CorUtils.inl  CoreFunctions.hpp  Diagnostics.hpp  Error.hpp  Error.inl  NonCopyable.hpp  NonInstantiable.hpp  NotNull.hpp  NotNull.inl  Pragmas.hpp  Span.hpp  Span.inl  StdArray.hpp  StdArray.inl  StdChrono.hpp  StdChrono.inl  StdString.hpp  StdString.inl  StdVector.hpp  StdVector.inl  Stopwatch.hpp  TemplateUtils.hpp  UidGenerator.hpp
houcor/src/hou/cor/: CharacterEncodings.cpp  Clock.cpp  CorError.cpp  CorUtils.cpp  CoreFunctions.cpp  StdString.cpp  Stopwatch.cpp  UidGenerator.cpp
houcor/test/: CMakeLists.txt
houcor/test/hou/cor/: TestBitwiseOperators.cpp  TestCharacterEncodings.cpp  TestClock.cpp  TestCorUtils.cpp  TestError.cpp  TestNotNull.cpp  TestSpan.cpp  TestStdArray.cpp  TestStdChrono.cpp  TestStdString.cpp  TestStdVector.cpp  TestStopwatch.cpp  TestTemplateUtils.cpp  TestUidGenerator.cpp
hougfx/: CMakeLists.txt
hougfx/include/hou/gfx/: Font.hpp  FormattedText.hpp  FrameBuffer.hpp  FrameBufferBlitFilter.hpp  FrameBufferBlitMask.hpp  FrameBufferStatus.hpp  FrameBufferTarget.hpp  GfxError.hpp  GfxExport.hpp  GlType.hpp  Glyph.hpp  GlyphMetrics.hpp  GlyphRenderInfo.hpp  GraphicContext.hpp  Mesh.hpp  Mesh.inl  Mesh2.hpp  Mesh2Fwd.hpp  Mesh2ShaderProgram.hpp  MeshDrawMode.hpp  MeshFillMode.hpp  RenderBuffer.hpp  RenderBuffer.inl  RenderBufferAttributes.hpp  RenderBufferFwd.hpp  RenderBufferTarget.hpp  RenderCanvas.hpp  RenderContext.hpp  RenderFont.hpp  RenderSurface.hpp  (+33 more)
hougfx/test/: CMakeLists.txt
houmth/test/: CMakeLists.txt
housys/: CMakeLists.txt
housys/test/: CMakeLists.txt
housys/test/data/: TestImage.xcf
source/: .clang-format  :w  ;  CMakeLists.txt
source/demo/: CMakeLists.txt
source/demo/data/: license.txt  monalisa.xcf  monkey.xcf
source/demo/src/: AudioDemo.cpp  InputDemo.cpp  RenderingDemo.cpp  TextRenderingDemo.cpp  audio_demo.cpp  bounded.hpp  display_demo.cpp  event_demo.cpp  input_demo.cpp  keyboard_demo.cpp  mesh_rendering_demo.cpp  mouse_demo.cpp  render_window_demo.cpp  rendering_demo.cpp  text_rendering_demo.cpp  window_demo.cpp
source/houal/: CMakeLists.txt
source/houal/test/: CMakeLists.txt
source/houaud/: CMakeLists.txt
source/houaud/test/: CMakeLists.txt
source/houcor/: CMakeLists.txt
source/houcor/test/: CMakeLists.txt
source/hougfx/: CMakeLists.txt
source/hougfx/test/: CMakeLists.txt
source/hougl/: CMakeLists.txt
source/hougl/test/: CMakeLists.txt
source/houmth/: CMakeLists.txt
source/houmth/test/: CMakeLists.txt
source/housys/: CMakeLists.txt
source/housys/test/: CMakeLists.txt
source/houtest/src/: test_main.cpp
(+2734 files in other folders)
