CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
MESSAGE(STATUS "--- Configuring target demo ---")



# Find OpenAL
FIND_PACKAGE(OpenAL REQUIRED)



# Output dir
SET(EXE_DEMO_OUTPUT_DIR ${CMAKE_BINARY_DIR})
MESSAGE(STATUS "Output dir: ${EXE_DEMO_OUTPUT_DIR}")



# Definitions
IF(OPT_USE_EXCEPTION_HANDLING)
  ADD_DEFINITIONS(-DHOU_USE_EXCEPTIONS)
ENDIF()
# HOU_DEBUG must be defined to take advantage of additional checks.
IF(CMAKE_BUILD_TYPE MATCHES Debug)
  ADD_DEFINITIONS(-DHOU_DEBUG)
ENDIF()
# When linking the static version of libhouzi, HOU_STATIC must be defined.
IF(NOT OPT_BUILD_SHARED)
  ADD_DEFINITIONS("-DHOU_STATIC")
ENDIF()
GET_PROPERTY(EXE_DEMO_DEFINITIONS
  DIRECTORY ${CURRENT_SOURCE_DIR}
  PROPERTY COMPILE_DEFINITIONS
)
MESSAGE(STATUS "Definitions: ${EXE_DEMO_DEFINITIONS}")



# Include directories.
INCLUDE_DIRECTORIES(
  ${LIB_HOUAUD_SOURCE_DIR}/include
  ${LIB_HOUAL_SOURCE_DIR}/include
  ${LIB_HOUGFX_SOURCE_DIR}/include
  ${LIB_HOUGL_SOURCE_DIR}/include
  ${LIB_HOUSYS_SOURCE_DIR}/include
  ${LIB_HOUMTH_SOURCE_DIR}/include
  ${LIB_HOUCOR_SOURCE_DIR}/include

  ${LIB_OPENAL_INCLUDE_DIR}
  ${LIB_GLAD_SOURCE_DIR}/include
  ${LIB_OGG_SOURCE_DIR}/include
  ${LIB_VORBIS_SOURCE_DIR}/include

  ${EXE_DEMO_SOURCE_DIR}/include
)
GET_PROPERTY(EXE_DEMO_INCLUDE_DIRS
  DIRECTORY ${CURRENT_SOURCE_DIR}
  PROPERTY INCLUDE_DIRECTORIES
)
# MESSAGE(STATUS "Include dirs: ${EXE_DEMO_INCLUDE_DIRS}")



# Linked libraries.
SET(EXE_DEMO_LIB
  ${LIB_HOUAUD}
  ${LIB_HOUAL}
  ${LIB_OPENAL}
  ${LIB_HOUGFX}
  ${LIB_HOUGL}
  ${LIB_GLAD}
  ${LIB_HOUSYS}
  ${LIB_HOUMTH}
  ${LIB_HOUCOR}
)
IF(WIN32)
  SET(EXE_DEMO_LIB
    ${EXE_DEMO_LIB}
    gdi32
    opengl32
  )
ENDIF()
MESSAGE(STATUS "Linked libs: ${EXE_DEMO_LIB}")



# Compiler flag
SET(EXE_DEMO_FLAGS "${CMAKE_CXX_FLAGS}")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -std=c++14")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -fexceptions")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wall")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wextra")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wzero-as-null-pointer-constant")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -pedantic")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wswitch-enum")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wmissing-declarations")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wunreachable-code")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wfloat-equal")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wundef")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wcast-align")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wredundant-decls")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Winit-self")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wshadow")
SET(EXE_DEMO_FLAGS "${EXE_DEMO_FLAGS} -Wnon-virtual-dtor")
MESSAGE(STATUS "Compiler flags: ${EXE_DEMO_FLAGS}")



# Add demo executable
SET(EXE_AUDIO_DEMO AudioDemo)
ADD_EXECUTABLE(${EXE_AUDIO_DEMO} src/AudioDemo.cpp)
SET_TARGET_PROPERTIES(${EXE_AUDIO_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_DEMO_FLAGS}
  RUNTIME_OUTPUT_DIRECTORY ${EXE_DEMO_OUTPUT_DIR}
)
TARGET_LINK_LIBRARIES(${EXE_AUDIO_DEMO} ${EXE_DEMO_LIB})



SET(EXE_INPUT_DEMO InputDemo)
ADD_EXECUTABLE(${EXE_INPUT_DEMO} src/InputDemo.cpp)
SET_TARGET_PROPERTIES(${EXE_INPUT_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_DEMO_FLAGS}
  RUNTIME_OUTPUT_DIRECTORY ${EXE_DEMO_OUTPUT_DIR}
)
TARGET_LINK_LIBRARIES(${EXE_INPUT_DEMO} ${EXE_DEMO_LIB})



SET(EXE_RENDERING_DEMO RenderingDemo)
ADD_EXECUTABLE(${EXE_RENDERING_DEMO} src/RenderingDemo.cpp)
SET_TARGET_PROPERTIES(${EXE_RENDERING_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_DEMO_FLAGS}
  RUNTIME_OUTPUT_DIRECTORY ${EXE_DEMO_OUTPUT_DIR}
)
TARGET_LINK_LIBRARIES(${EXE_RENDERING_DEMO} ${EXE_DEMO_LIB})



SET(EXE_TEXT_RENDERING_DEMO TextRenderingDemo)
ADD_EXECUTABLE(${EXE_TEXT_RENDERING_DEMO} src/TextRenderingDemo.cpp)
SET_TARGET_PROPERTIES(${EXE_TEXT_RENDERING_DEMO} PROPERTIES
  COMPILE_FLAGS ${EXE_DEMO_FLAGS}
  RUNTIME_OUTPUT_DIRECTORY ${EXE_DEMO_OUTPUT_DIR}
)
TARGET_LINK_LIBRARIES(${EXE_TEXT_RENDERING_DEMO} ${EXE_DEMO_LIB})



# Copy demo files.
ADD_CUSTOM_COMMAND(
  TARGET ${EXE_TEXT_RENDERING_DEMO} POST_BUILD
  COMMAND ${CMAKE_COMMAND} -E copy_directory
  ${CMAKE_CURRENT_SOURCE_DIR}/data
  ${EXE_DEMO_OUTPUT_DIR}/demo/data
  COMMENT "Copying demo data directory to build folder"
)

