CMAKE_MINIMUM_REQUIRED(VERSION 3.3)
MESSAGE(STATUS "--- Configuring target ${LIB_HOUAL} ---")



# Output dir
SET(LIB_HOUAL_OUTPUT_DIR ${CMAKE_BINARY_DIR})
MESSAGE(STATUS "Output dir: ${LIB_HOUAL_OUTPUT_DIR}")



# Definitions.
ADD_DEFINITIONS(-DHOU_AL_EXPORTS)
GET_PROPERTY(LIB_HOUAL_DEFINITIONS
  DIRECTORY ${CURRENT_SOURCE_DIR}
  PROPERTY COMPILE_DEFINITIONS
)
MESSAGE(STATUS "Definitions: ${LIB_HOUAL_DEFINITIONS}")



# Include directories.
INCLUDE_DIRECTORIES(
  ${LIB_OPENAL_INCLUDE_DIR}
  ${LIB_HOUCOR_INCLUDE_DIR}
  ${LIB_HOUMTH_INCLUDE_DIR}
  ${LIB_HOUAL_INCLUDE_DIR}
)



# Source files.
SET(LIB_HOUAL_SRC
  src/hou/al/AlBufferHandle.cpp
  src/hou/al/AlCheck.cpp
  src/hou/al/AlContext.cpp
  src/hou/al/AlDevice.cpp
  src/hou/al/AlError.cpp
  src/hou/al/AlListener.cpp
  src/hou/al/AlObjectHandle.cpp
  src/hou/al/AlSourceHandle.cpp
  src/hou/al/AlState.cpp
)



# Linked libraries.
IF(HOU_CFG_SHARED_LIBS)
  SET(LIB_HOUAL_LIB
    ${LIB_OPENAL}
    ${LIB_HOUMTH}
    ${LIB_HOUCOR}
  )
ELSE()
  SET(LIB_HOUAL_LIB)
ENDIF()
MESSAGE(STATUS "Linked libs: ${LIB_HOUAL_LIB}")



# Add targets.
IF(HOU_CFG_SHARED_LIBS)
  ADD_LIBRARY(${LIB_HOUAL} SHARED ${LIB_HOUAL_SRC})
ELSE()
  ADD_LIBRARY(${LIB_HOUAL} STATIC ${LIB_HOUAL_SRC})
ENDIF()
SET_TARGET_PROPERTIES(${LIB_HOUAL} PROPERTIES
  COMPILE_FLAGS ${LIB_HOU_FLAGS}
  LINKER_LANGUAGE CXX
  ARCHIVE_OUTPUT_DIRECTORY ${LIB_HOUAL_OUTPUT_DIR}
  LIBRARY_OUTPUT_DIRECTORY ${LIB_HOUAL_OUTPUT_DIR}
  RUNTIME_OUTPUT_DIRECTORY ${LIB_HOUAL_OUTPUT_DIR}
)
TARGET_LINK_LIBRARIES(${LIB_HOUAL} ${LIB_HOUAL_LIB})



MESSAGE(STATUS "")



IF(HOU_CFG_BUILD_AL_TESTS)
  ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/test)
ENDIF()

